--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li class="personagem" id="vampira" data-name="Vampira" data-description="Vampira tem a habilidade de absorver a vitalidade, memórias, habilidades e poderes de outros seres vivos através do contato com a pele.">
                     <img src="./src/project/card-vampira.jpg" alt="Personagem Vampira">
                 </li>
-                <li class="personagem" id="Wolverine" data-name="Wolverine" data-description="Wolverine possui sentidos afiados, capacidades físicas aprimoradas, habilidade regenerativa e três garras em cada mão.">
+                <li class="personagem" id="wolverine" data-name="Wolverine" data-description="Wolverine possui sentidos afiados, capacidades físicas aprimoradas, habilidade regenerativa e três garras em cada mão.">
                     <img src="./src/project/card-wolverine.jpg" alt="Personagem Wolverine">
                 </li>
                 <li class="personagem" id="noturno" data-name="Noturno" data-description="Noturno possui agilidade sobre-humana, e a capacidade de teletransporte, invisibilidade em sombras profundas, e as mãos e os pés aderirem a parede">
